完成页面传参

--- a/src/li-style/base.scss
+++ b/src/li-style/base.scss
@@ -25,7 +25,9 @@ a:hover{
 i{font-style:normal;}
 *{box-sizing:border-box;}
 
-
+//将页面设成弹性盒
 body,html{height: 100%;}
-#libao{height: 100%;display:flex;flex-direction:column;}
+#libao{height: 100%;}
+
+
 
