--- a/src/li-style/fixNav.scss
+++ b/src/li-style/fixNav.scss
@@ -1,5 +1,8 @@
 .fixNav{
     background-color:#FFE4E1;
+    // position:fixed;
+    // bottom:0;
+    // width: 100%;
     ul{
         display:flex;
         justify-content: space-between;
