--- a/src/li-style/base.scss
+++ b/src/li-style/base.scss
@@ -6,7 +6,7 @@ body,h1,h2,h3,h4,p,a,input,img,ul,li,ol,dl,dt,dd{
 ul,ol{
 	list-style:none;}
 img{
-	display:block;
+	// display:block;
 	border:0;}
 input{
     /*去掉高亮*/
@@ -19,7 +19,7 @@ body{
 	color:#3e3e3e;}
 a{
 	text-decoration:none;
-	color:#0dc441;}
+}
 a:hover{
 	text-decoration:underline;}
 i{font-style:normal;}
