--- a/src/li-style/details.scss
+++ b/src/li-style/details.scss
@@ -1,46 +1,393 @@
-.j-list {
-    ul {
-        display: flex;
-        border-top: 1px solid #ddd;
-        border-bottom: 1px solid #ddd;
-        justify-content: space-around;
-        li {
-            float: left;
-            line-height: 1.125rem;
-            color: #666;
-            a {
-                color: #666;
+div {
+    //  position: relative;
+    .j-head {
+        .header {
+            .back {
+                width: 100%;
+                height: 2.5rem;
+                position: relative;
+                background: url(../../images/td.jpg);
+                margin-bottom: 0.78125rem;
+                position: relative;
+                img {
+                    width: 2.1875rem;
+                    position: absolute;
+                    left: 50%;
+                    top: 0.9375rem;
+                    transform: translateX(-50%);
+                    border-radius: 50%;
+                }
+                .return {
+                    position: absolute;
+                    top: 0.15625rem;
+                    left: 0.15625rem;
+                    display: block;
+                    text-align: center;
+                    line-height: 0.703125rem;
+                    width: 0.78125rem;
+                    height: 0.78125rem;
+                    border-radius: 50%;
+                    background-color: deeppink;
+                    font-size: 0.546875rem;
+                    a{
+                        color: #fff;
+                        
+                    }
+                }
             }
-        }
-        //      li:nth-child(1){
-        //          border-bottom: 0.03125rem solid hotpink;
-        //          color:#333;
-        //          font-weight: 700;
-        //      }
-        .active {
-            border-bottom: 0.03125rem solid hotpink;
-            color: #333;
-            font-weight: 700;
+            h1 {
+                text-align: center;
+                font-size: 0.59375rem;
+                margin-top: 0.15625rem;
+            }
+            .shop_header {
+                display: flex;
+                justify-content: space-around;
+                margin-top: 0.234375rem;
+                padding: 0 1.5625rem;
+                font-size: 0.28125rem;
+                color: #000;
+            }
+            p {
+                width: 6.25rem;
+                font-size: 0.28125rem;
+                color: #999;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                text-align: center;
+                margin-top: 0.125rem;
+                position: relative;
+                left: 50%;
+                transform: translateX(-50%);
+            }
         }
     }
-}
-
-.j-foods {
-    .all_kinds {
-        width: 1.5625rem;
+    .j-list {
+        margin-top: 0.3125rem;
         ul {
+            display: flex;
+            border-top: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
+            justify-content: space-around;
             li {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                border-bottom: 1px solid #e3e3e3;
-                height: 1.875rem;
-                font-size:0.375rem;
+                float: left;
+                line-height: 1.125rem;
+                color: #666;
+                a {
+                    color: #666;
+                }
+            }
+            .active {
+                border-bottom: 0.03125rem solid hotpink;
                 color: #333;
-                padding: 0.3125rem 0.234375rem;
-                text-align: center;
-                background-color: #f9f9f9;
+                font-weight: 700;
             }
         }
+        ul.isFixed {
+            position: fixed;
+            background-color: #Fff;
+            top: 0;
+            width: 100%;
+            z-index: 999;
+        }
+    }
+    .j-foods {
+        background-color: #ffe4e1;
+        .all_kinds {
+            overflow: hidden;
+            background-color: #fff;
+            .menus {
+                display: flex;
+                width: 20%;
+                float: left;
+                height: 20.3125rem;
+                ul {
+                    overflow-y: auto;
+                    li {
+                        a {
+                            display: flex;
+                            text-decoration: none;
+                            flex-direction: column;
+                            justify-content: center;
+                            border-bottom: 1px solid #e1e1e1;
+                            height: 1.875rem;
+                            font-size: 0.375rem;
+                            color: #333;
+                            padding: 0.3125rem 0.234375rem;
+                            text-align: center;
+                            background-color: #f9f9f9;
+                        }
+                        a.active {
+                            background-color: #fff;
+                            color: #333;
+                        }
+                    }
+                }
+            }
+            .foods {
+                float: right;
+                width: 77%;
+                height: 20.3125rem;
+                overflow-y: auto;
+                display: flex;
+                >div {
+                    flex: 1;
+                    >div {
+                        >p {
+                            margin: 0.234375rem;
+                            font-weight: 700;
+                        }
+                        ul {
+                            margin-bottom: 0.78125rem;
+                            li {
+                                overflow: hidden;
+                                margin-bottom: 0.390625rem;
+                                img {
+                                    float: left;
+                                    width: 2.1875rem;
+                                }
+                                .coll {
+                                    width: 60%;
+                                    float: left;
+                                    margin-left: 0.3125rem;
+                                    div {
+                                        h3 {
+                                            font-size: 0.4375rem;
+                                        }
+                                        p:nth-of-type(1) {
+                                            width: 5.15625rem;
+                                            font-size: 0.3125rem;
+                                            color: #999;
+                                            white-space: nowrap;
+                                            text-overflow: ellipsis;
+                                            overflow: hidden;
+                                            margin-top: 0.125rem;
+                                        }
+                                        >span {
+                                            display: inline-block;
+                                            margin-top: 0.125rem;
+                                            font-size: 0.3125rem;
+                                        }
+                                    }
+                                    >.addReduce {
+                                        //                                  margin-left:0.3125rem ;
+                                        overflow: hidden;
+                                        position: relative;
+                                        bottom: 0;
+                                        left: 0;
+                                        //                                  padding: 0.234375rem;
+                                        >span:nth-of-type(1) {
+                                            display: block;
+                                            font-size: 0.40625rem;
+                                            color: red;
+                                            font-weight: 700;
+                                            float: left;
+                                        }
+                                        >.cal {
+                                            float: right;
+                                            width: 2.34375rem;
+                                            margin-top: 0.15625rem;
+                                            display: flex;
+                                            justify-content: space-around;
+                                            span {
+                                                display: flex;
+                                                justify-content: center;
+                                                width: 0.625rem;
+                                                height: 0.625rem;
+                                                border-radius: 50%;
+                                                font-weight: 700;
+                                                font-size: 0.4375rem;
+                                            }
+                                            .reduce {
+                                                background-color: #fff;
+                                                border: 0.03125rem solid deeppink;
+                                                color: deeppink;
+                                                line-height: 0.46875rem;
+                                            }
+                                            .add {
+                                                background-color: deeppink;
+                                                color: #fff;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .footer {
+                .total {
+                    background: #fcd0d0;
+                    width: 100%;
+                    height: 1.25rem;
+                    position: fixed;
+                    bottom: 0;
+                    left: 0;
+                    >div {
+                        float: left;
+                        height: 100%;
+                        position: relative;
+                        span {
+                            text-align: center;
+                            display: block;
+                        }
+                        span:nth-of-type(1) {
+                            color: #333;
+                            font-weight: 700;
+                            font-size: 0.4375rem;
+                        }
+                    }
+                    >span {
+                        display: block;
+                        width: 2.34375rem;
+                        height: 100%;
+                        background-color: red;
+                        float: right;
+                        color: #333;
+                        font-weight: 700;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background-color: #ffe4e4;
+                    }
+                }
+            }
+        }
+        .activity {
+            padding: 0.15625rem 0.625rem;
+            margin-bottom: 0.3125rem;
+            background-color: #fff;
+            h1 {
+                font-size: 0.5625rem;
+                color: #000;
+                margin-bottom: 0.234375rem;
+                position: relative;
+                z-index: 2;
+            }
+            ul {
+                li {
+                    overflow: hidden;
+                    margin-bottom: 0.15625rem;
+                    span {
+                        display: block;
+                        font-size: 0.34375rem;
+                    }
+                    span:nth-of-type(1) {
+                        float: left;
+                        padding: 0.046875rem 0.125rem;
+                        color: #fff;
+                    }
+                    span:nth-of-type(2) {
+                        color: #666;
+                        float: left;
+                        margin-left: 0.3125rem;
+                    }
+                }
+            }
+        }
+        .infor {
+            padding: 0.15625rem 0.625rem;
+            margin-bottom: 0.3125rem;
+            background-color: #fff;
+            //      margin-top: 0.46875rem;
+            h1 {
+                font-size: 0.5625rem;
+                color: #000;
+                margin-bottom: 0.234375rem;
+                position: relative;
+                z-index: 2;
+            }
+            p {
+                color: #666;
+            }
+            div {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                overflow: hidden;
+                height: 1.25rem;
+                border-bottom: 1px solid hotpink;
+                background-color: #fff;
+                >span:nth-of-type(1) {
+                    display: block;
+                }
+                >span:nth-of-type(2) {
+                    display: block;
+                }
+            }
+            div:nth-of-type(4) {
+                border-bottom: none;
+            }
+        }
+    }
+    ._bounce {
+        position: fixed;
+        //  top: 2.03125rem;
+        left: 50%;
+        top: 4.6875rem;
+        transform: translateX(-50%);
+        z-index: 1000000;
+        background-color: #fff;
+        padding: 0.3125rem 0.46875rem;
+        >div {
+            h3 {
+                margin-top: 0.3125rem;
+            }
+            p {
+                margin-top: 0.3125rem;
+            }
+            p:nth-of-type(1) {
+                font-size: 0.3125rem;
+                span:nth-of-type(1) {
+                    display: inline-block;
+                    margin-right: 0.234375rem;
+                }
+            }
+            >p:nth-of-type(2) {
+                span:nth-of-type(1) {
+                    display: block;
+                    float: left;
+                    font-size: 0.4375rem;
+                    color: red;
+                    font-weight: 700;
+                }
+                >.cal {
+                    float: right;
+                    width: 2.34375rem;
+                    display: flex;
+                    justify-content: space-around;
+                    span {
+                        display: flex;
+                        justify-content: center;
+                        width: 0.625rem;
+                        height: 0.625rem;
+                        border-radius: 50%;
+                        font-weight: 700;
+                        font-size: 0.4375rem;
+                    }
+                    .reduce {
+                        background-color: #fff;
+                        border: 0.03125rem solid deeppink;
+                        color: deeppink;
+                        line-height: 0.46875rem;
+                    }
+                    .add {
+                        background-color: deeppink;
+                        color: #fff;
+                    }
+                }
+            }
+        }
+    }
+    .cover {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.3);
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 }
